--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,74 @@
 {
-  "extends": "@tsconfig/react-native/tsconfig.json"
+  "compilerOptions": {
+    "baseUrl": "",
+    "paths": {
+      "#navigation/*": [
+        "src/navigation/*"
+      ],
+      "#navigation": [
+        "src/navigation"
+      ],
+      "#components/*": [
+        "src/components/*"
+      ],
+      "#components": [
+        "src/components"
+      ],
+      "#screens/*": [
+        "src/screens/*"
+      ],
+      "#screens": [
+        "src/screens"
+      ],
+      "#services/*": [
+        "src/services/*"
+      ],
+      "#services": [
+        "src/services"
+      ],
+      "#types/*": [
+        "src/types/*"
+      ],
+      "#types": [
+        "src/types"
+      ],
+      "#assets/*": [
+        "assets/*"
+      ],
+      "#assets": [
+        "assets"
+      ],
+      "#root/*": [
+        "./*"
+      ],
+      "#root": [
+        "."
+      ],
+    },
+    "target": "esnext",
+    "module": "commonjs",
+    "lib": [
+      "dom",
+      "esnext"
+    ],
+    "allowJs": true,
+    "jsx": "react-native",
+    "noEmit": true,
+    "isolatedModules": true,
+    "strict": true,
+    "moduleResolution": "node",
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
+    "skipLibCheck": false,
+    "resolveJsonModule": true,
+    "typeRoots": [
+      "./src/types"
+    ],
+  },
+  "exclude": [
+    "node_modules",
+    "babel.config.js",
+    "metro.config.js",
+    "jest.config.js"
+  ]
 }
